src/tess/tl/test/fail/test_fail_integer_directed_standalone_cptrdiff_to_int.tl
#module main

accept_int(x: Int) -> Int { x }

main() {
    x: CPtrDiff := 42z
    accept_int(x)
    0
}
